# Ream-ZKVM-Benchmarks

./: .gitignore  README.md
Beacon-Harness/: Cargo.toml  Coverage.md  EXECUTION_VS_PROOF_IMPLEMENTATION.md  README.md  rust-toolchain.toml
Beacon-Harness/.cargo/: config.toml
Beacon-Harness/guest/app/: Cargo.toml
Beacon-Harness/guest/app/elf/: riscv32im-pico-zkvm-elf
Beacon-Harness/guest/app/src/: main.rs
Beacon-Harness/guest/jolt/: Cargo.toml
Beacon-Harness/guest/jolt/src/: lib.rs  main.rs
Beacon-Harness/guest/openvm/: Cargo.toml  openvm_init.rs
Beacon-Harness/guest/openvm/src/: main.rs
Beacon-Harness/guest/risc0/methods/: Cargo.toml
Beacon-Harness/guest/risc0/methods/guest/: Cargo.toml
Beacon-Harness/guest/risc0/methods/guest/src/: main.rs
Beacon-Harness/guest/sp1/: Cargo.toml
Beacon-Harness/guest/sp1/src/: main.rs
Beacon-Harness/guest/zisk/: Cargo.toml  timinganalysis.py
Beacon-Harness/guest/zisk/src/: main.rs
Beacon-Harness/host/: Cargo.toml  Makefile  build.rs
Beacon-Harness/host/subscripts/: download_ef_data.sh  parse_log_to_table.sh
Beacon-Harness/host/summaries/: sorted_summary_risc-zero_block_attestation.md  sorted_summary_sp1_block_attestation.md  sorted_summary_zisk_block_attestation.md
Beacon-Harness/host/summaries/picoExecution/block/: sorted_summary_pico_block_attestation.md  sorted_summary_pico_block_attester_slashing.md  sorted_summary_pico_block_block_header.md  sorted_summary_pico_block_bls_to_execution_change.md  sorted_summary_pico_block_deposit.md  sorted_summary_pico_block_proposer_slashing.md  sorted_summary_pico_block_sync_aggregate.md  sorted_summary_pico_block_voluntary_exit.md  sorted_summary_pico_block_withdrawals.md
Beacon-Harness/host/summaries/picoExecution/epoch/: sorted_summary_pico_epoch_effective_balance_updates.md  sorted_summary_pico_epoch_eth1_data_reset.md  sorted_summary_pico_epoch_historical_summaries_update.md  sorted_summary_pico_epoch_inactivity_updates.md  sorted_summary_pico_epoch_justification_and_finalization.md  sorted_summary_pico_epoch_participation_flag_updates.md  sorted_summary_pico_epoch_pending_consolidations.md  sorted_summary_pico_epoch_pending_deposits.md  sorted_summary_pico_epoch_randao_mixes_reset.md  sorted_summary_pico_epoch_registry_updates.md  sorted_summary_pico_epoch_rewards_and_penalties.md  sorted_summary_pico_epoch_slashings.md  sorted_summary_pico_epoch_slashings_reset.md
Beacon-Harness/host/summaries/riscZeroExecution/block/: sorted_summary_risc-zero_block_attestation.md  sorted_summary_risc-zero_block_attester_slashing.md  sorted_summary_risc-zero_block_block_header.md  sorted_summary_risc-zero_block_bls_to_execution_change.md  sorted_summary_risc-zero_block_deposit.md  sorted_summary_risc-zero_block_proposer_slashing.md  sorted_summary_risc-zero_block_sync_aggregate.md  sorted_summary_risc-zero_block_voluntary_exit.md  sorted_summary_risc-zero_block_withdrawals.md
Beacon-Harness/host/summaries/riscZeroExecution/epoch/: sorted_summary_risc-zero_epoch_effective_balance_updates.md  sorted_summary_risc-zero_epoch_eth1_data_reset.md  sorted_summary_risc-zero_epoch_historical_summaries_update.md  sorted_summary_risc-zero_epoch_inactivity_updates.md  sorted_summary_risc-zero_epoch_justification_and_finalization.md  sorted_summary_risc-zero_epoch_participation_flag_updates.md  sorted_summary_risc-zero_epoch_pending_consolidations.md  sorted_summary_risc-zero_epoch_pending_deposits.md  sorted_summary_risc-zero_epoch_randao_mixes_reset.md  sorted_summary_risc-zero_epoch_registry_updates.md  sorted_summary_risc-zero_epoch_rewards_and_penalties.md  sorted_summary_risc-zero_epoch_slashings.md  sorted_summary_risc-zero_epoch_slashings_reset.md
Beacon-Harness/host/summaries/sp1Execution/block/: sorted_summary_sp1_block_attestation.md  sorted_summary_sp1_block_attester_slashing.md  sorted_summary_sp1_block_block_header.md  sorted_summary_sp1_block_bls_to_execution_change.md  sorted_summary_sp1_block_deposit.md  sorted_summary_sp1_block_proposer_slashing.md  sorted_summary_sp1_block_sync_aggregate.md  sorted_summary_sp1_block_voluntary_exit.md  sorted_summary_sp1_block_withdrawals.md
Beacon-Harness/host/summaries/sp1Execution/epoch/: sorted_summary_sp1_epoch_effective_balance_updates.md  sorted_summary_sp1_epoch_eth1_data_reset.md  sorted_summary_sp1_epoch_historical_summaries_update.md  sorted_summary_sp1_epoch_inactivity_updates.md  sorted_summary_sp1_epoch_justification_and_finalization.md  sorted_summary_sp1_epoch_participation_flag_updates.md  sorted_summary_sp1_epoch_pending_consolidations.md  sorted_summary_sp1_epoch_pending_deposits.md  sorted_summary_sp1_epoch_randao_mixes_reset.md  sorted_summary_sp1_epoch_registry_updates.md  sorted_summary_sp1_epoch_rewards_and_penalties.md  sorted_summary_sp1_epoch_slashings.md  sorted_summary_sp1_epoch_slashings_reset.md
Beacon-Harness/host/summaries/ziskExecution/block/: sorted_summary_zisk_block_attestation.md  sorted_summary_zisk_block_attester_slashing.md  sorted_summary_zisk_block_block_header.md  sorted_summary_zisk_block_bls_to_execution_change.md  sorted_summary_zisk_block_deposit.md  sorted_summary_zisk_block_proposer_slashing.md  sorted_summary_zisk_block_sync_aggregate.md  sorted_summary_zisk_block_voluntary_exit.md  sorted_summary_zisk_block_withdrawals.md
Beacon-Harness/host/summaries/ziskExecution/epoch/: sorted_summary_zisk_epoch_effective_balance_updates.md  sorted_summary_zisk_epoch_eth1_data_reset.md  sorted_summary_zisk_epoch_historical_summaries_update.md  sorted_summary_zisk_epoch_inactivity_updates.md  sorted_summary_zisk_epoch_justification_and_finalization.md  sorted_summary_zisk_epoch_participation_flag_updates.md  sorted_summary_zisk_epoch_pending_consolidations.md  sorted_summary_zisk_epoch_pending_deposits.md  sorted_summary_zisk_epoch_randao_mixes_reset.md  sorted_summary_zisk_epoch_registry_updates.md  sorted_summary_zisk_epoch_rewards_and_penalties.md  sorted_summary_zisk_epoch_slashings.md  sorted_summary_zisk_epoch_slashings_reset.md
Jolt/: README.md
RiscZero/: README.md
ZKVms/: README.md
(+1 files in other folders)
