[package]
version = "0.1.0"
name = "consenzero-script"
edition = "2021"

[[bin]]
name = "consenzero-script"
path = "src/bin/main.rs"

[dependencies]

#zkvms
risc0-zkvm = { version = "3.0.3", optional = true }
sp1-sdk = { version = "5.2.2", optional = true }
pico-sdk = { workspace = true, optional = true }
openvm-sdk = { workspace = true, optional = true }
openvm-build = { workspace = true, optional = true }

# Ethereum dependencies
ethereum_ssz = { workspace = true }

# Ream dependencies
ream-consensus = { workspace = true }
ream-lib = { path = "../lib" }

clap = { version = "4.0", features = ["derive", "env"] }
derive_more = { version = "2.0.1", features = ["full"] }
dotenv = "0.15.0"
hex = "0.4.3"
methods = { path = "../guest/risc0/methods", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.139", default-features = false, features = ["alloc"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree_hash = { workspace = true }
bincode = "1.3"

[features]
default = []
risc0 = ["dep:risc0-zkvm", "dep:methods"]
sp1 = ["dep:sp1-sdk", "dep:sp1-build"]
pico = ["dep:pico-sdk"]
zisk = []
openvm = ["dep:openvm-sdk", "dep:openvm-build"]

[build-dependencies]
sp1-build = { version = "5.2.2", optional = true }
