[package]
version = "0.1.0"
name = "ream-operations-openvm"
edition = "2021"

[dependencies]
# OpenVM dependencies
openvm = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.0", features = [
    "std",
] }

# Ream dependencies
ethereum_ssz = "0.9"
ream-consensus = { git = "https://github.com/syjn99/ream", package = "ream-consensus", rev = "50d148b9b0f6f6064dbe3803515f1e10ead93d42", features = ["zkvm"] }
ream-lib = { path = "../../lib" }
tree_hash = "0.10"
tree_hash_derive = "0.10"
ethereum_hashing = { git = "https://github.com/ReamLabs/ethereum_hashing" }
sha2 = "0.10.8"
ssz_types = { git = "https://github.com/ReamLabs/ssz_types", branch = "magic-extended-list" }
# Pin alloy crates to versions compatible with rustc 1.86 (required by OpenVM SDK nightly-2025-02-14)
alloy-consensus = "1.0.22"
alloy-eips = "1.0.22"
alloy-eip2930 = "0.2.1"
alloy-eip7702 = "0.6.1"
alloy-serde = "1.0.22"
alloy-tx-macros = "1.0.38"

[profile.release]
panic = "abort"
lto = "thin"

[profile.profiling]
inherits = "release"
debug = 2
strip = false

