[package]
version = "0.1.0"
name = "ream-operations"
edition = "2021"

[dependencies]
# SP1 dependencies
sp1-zkvm = "5.2.2"
sp1-derive = "5.2.2"

# Ream dependencies
ethereum_ssz = { workspace = true }
ream-consensus = { workspace = true }
ream-lib = { path = "../../lib" }
tree_hash = { workspace = true }
tree_hash_derive = { workspace = true }
ethereum_hashing = { workspace = true }
sha2 = { workspace = true }
ssz_types = { workspace = true }
