[package]
name = "consensus_stf"
version = "0.1.0"
edition = "2021"

[dependencies]
# Risc0 dependencies
risc0-zkvm = { version = "3.0.3", default-features = false, features = ['std'] }

# Ream dependencies
ethereum_ssz = { workspace = true }
ream-consensus = { workspace = true }
ream-lib = { path = "../../../../lib" }
tree_hash = { workspace = true }
tree_hash_derive = { workspace = true }
ethereum_hashing = { workspace = true }
sha2 = { workspace = true }
ssz_types = { workspace = true }
